[gd_scene load_steps=6 format=3 uid="uid://b4ub6a2vj0ojn"]

[ext_resource type="Script" uid="uid://eiblf5wmb4tq" path="res://login.gd" id="1_cau7c"]
[ext_resource type="Script" uid="uid://b7qu7mpxkmtuj" path="res://accounts.gd" id="1_xlo4h"]
[ext_resource type="Theme" uid="uid://dni1do3mxtlpj" path="res://loginpagebutton.tres" id="2_3n56f"]
[ext_resource type="Script" uid="uid://jgvp8sodbaga" path="res://register.gd" id="3_xlo4h"]

[sub_resource type="LabelSettings" id="LabelSettings_bvvwm"]
font_size = 32

[node name="Accounts" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_xlo4h")

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_3n56f")
text = "Login
"

[node name="Sign Up" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_3n56f")
text = "Sign Up"

[node name="Register" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_xlo4h")

[node name="CreateContainer" type="VBoxContainer" parent="Register"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Register/CreateContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("2_3n56f")
text = "Create Account"

[node name="CreateUser" type="LineEdit" parent="Register/CreateContainer"]
layout_mode = 2
theme = ExtResource("2_3n56f")
placeholder_text = "Username"
max_length = 15

[node name="CreatePass" type="LineEdit" parent="Register/CreateContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_3n56f")
placeholder_text = "Password"
max_length = 15
secret = true
secret_character = "#"

[node name="CreateConfirmPass" type="LineEdit" parent="Register/CreateContainer"]
layout_mode = 2
theme = ExtResource("2_3n56f")
placeholder_text = "Enter Password Again"
max_length = 15
secret = true
secret_character = "#"

[node name="CreateEmail" type="LineEdit" parent="Register/CreateContainer"]
visible = false
layout_mode = 2

[node name="CreateSubmit" type="Button" parent="Register/CreateContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_3n56f")
text = "Create Account"

[node name="CreateBack" type="Button" parent="Register/CreateContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_3n56f")
text = "Back"

[node name="CheckBox" type="CheckBox" parent="Register/CreateContainer"]
visible = false
layout_mode = 2

[node name="Login" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cau7c")
metadata/_edit_use_anchors_ = true

[node name="LoginContainer" type="VBoxContainer" parent="Login"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Login/LoginContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("2_3n56f")
text = "Game Login"

[node name="LoginUser" type="LineEdit" parent="Login/LoginContainer"]
layout_mode = 2
theme = ExtResource("2_3n56f")
placeholder_text = "Username"
max_length = 15

[node name="LoginPass" type="LineEdit" parent="Login/LoginContainer"]
layout_mode = 2
theme = ExtResource("2_3n56f")
placeholder_text = "Password"
max_length = 15
secret = true
secret_character = "#"

[node name="LoginSubmit" type="Button" parent="Login/LoginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_3n56f")
text = "Login
"

[node name="LoginBack" type="Button" parent="Login/LoginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_3n56f")
text = "Back"

[node name="EULA" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="EULA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="EULA/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="EULA/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EULA/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "End-User License Agreement (EULA)"
label_settings = SubResource("LabelSettings_bvvwm")
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="EULA/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "IMPORTANT â€“ READ CAREFULLY

This End-User License Agreement (\"Agreement\") is a legal agreement between you (\"User\" or \"You\") and Sprocket Games, a game development company (\"Company\", \"We\", \"Us\", or \"Our\") for the use of the software titled \"Drill It\" (\"Software\").

By installing, copying, or otherwise using the Software, you agree to be bound by the terms of this Agreement. If you do not agree to the terms of this Agreement, do not install or use the Software.

1. GRANT OF LICENSE
Sprocket Games grants you a non-exclusive, non-transferable, revocable license to use one copy of the Software on a single device solely for your personal, non-commercial entertainment purposes.

2. RESTRICTIONS
You may not:

Copy, modify, or distribute the Software without credit except as expressly permitted by this Agreement;

Circumvent any technology used to protect the Software."

[node name="ConfirmEula" type="Button" parent="EULA/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm Agreement"

[connection signal="pressed" from="ButtonsContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="ButtonsContainer/Sign Up" to="." method="_on_sign_up_pressed"]
[connection signal="pressed" from="Register/CreateContainer/CreateSubmit" to="Register" method="_on_create_submit_pressed"]
[connection signal="pressed" from="Register/CreateContainer/CreateBack" to="." method="_on_create_back_pressed"]
[connection signal="pressed" from="Register/CreateContainer/CheckBox" to="Register" method="_on_check_box_pressed"]
[connection signal="pressed" from="Login/LoginContainer/LoginSubmit" to="Login" method="_on_login_submit_pressed"]
[connection signal="pressed" from="Login/LoginContainer/LoginBack" to="." method="_on_login_back_pressed"]
[connection signal="pressed" from="EULA/Panel/MarginContainer/VBoxContainer/ConfirmEula" to="." method="_on_confirm_eula_pressed"]
